<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_language_settings"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_choose_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/choose_language" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Switch
        android:id="@+id/daily_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/daily_reminder"
        android:checked="false"
        android:textOff="OFF"
        android:textOn="ON"/>

    <Switch
        android:id="@+id/release_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/realease_reminder"
        android:checked="false"
        android:textOff="OFF"
        android:textOn="ON"/>

</LinearLayout>